@@ -1,10 +1,6 @@
-#*********************************************************************
-#'configure.ac.' automatically generated by 'autogen.sh' do not modify
-#*********************************************************************
-
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(Dimemas, 4.0-48M, tools@bsc.es)
+AC_INIT(Dimemas, @@VERSION_NUMBER@@, tools@bsc.es)
 
 AC_CANONICAL_SYSTEM
 
